--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,10 @@ install:
 script:
 - python3 -m flake8
 - python3 -m pytest
+
+deploy:
+  provide: pypi
+  user: tomkukral
+  on:
+    tags: true
+    repo: tomkukral/kib
