--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: python
 python:
-- '3.5'
-- '3.6'
+  - '3.5'
+  - '3.6'
 install:
-- pip3 install -r requirements.txt
+  - pip3 install -r requirements.txt
 script:
-- python3 -m flake8
-- python3 -m pytest
+  - python3 -m flake8
+  - python3 -m pytest
+  - coveralls
 deploy:
   provider: pypi
   user: tomkukral
