--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ install:
   - pip3 install -r requirements.txt
 script:
   - python3 -m flake8
-  - python3 -m pytest
+#  - python -m pytest --cov=. --cov-fail-under=69 --cov-report=term-missing:skip-covered
+  - python -m pytest --cov=. --cov-report=term-missing:skip-covered
   - coveralls
 deploy:
   provider: pypi
